Fix css style for breadcrumb on mobile menu, footer, list color, mainmenu

--- a/web/themes/custom/agid/scss/theme/_breadcrumb.scss
+++ b/web/themes/custom/agid/scss/theme/_breadcrumb.scss
@@ -2,3 +2,11 @@
 .Breadcrumb-link {
   font-weight: 400 !important;
 }
+
+.Breadcrumb {
+  margin-top: 6rem;
+
+  @include breakpoint(large) {
+    margin-top: 0;
+  }
+}
